versioned_docs/version-2.11.0/platforms/mister/launchers.md
---
description: "Zaparoo launcher configuration for MiSTer FPGA: supported cores, systems, and game detection from MiSTer's standard folder structure."
keywords: [zaparoo mister launchers, mister fpga cores zaparoo, mister game launch, zaparoo mister systems]
---

# Launchers

MiSTer FPGA uses a built-in launcher that automatically detects games from your games folders. Games launch via MGL files generated by Zaparoo, following the official folder structure set by Downloader.

## Supported Systems

### Console Systems

| System ID | Folders | Extensions |
|-----------|---------|------------|
| `3DO` | 3DO | `.iso`, `.cue` |
| `AdventureVision` | AVision | `.bin` |
| `Arcadia` | Arcadia | `.bin` |
| `AmigaCD32` | AmigaCD32 | `.cue`, `.chd`, `.iso` |
| `Astrocade` | Astrocade | `.bin` |
| `Atari2600` | ATARI7800, Atari2600 | `.a26`, `.bin` |
| `Atari5200` | ATARI5200 | `.car`, `.a52`, `.bin`, `.rom` |
| `Atari7800` | ATARI7800 | `.a78`, `.bin` |
| `AtariLynx` | AtariLynx | `.lnx` |
| `CasioPV1000` | Casio_PV-1000 | `.bin` |
| `CDI` | CD-i | `.cue`, `.chd` |
| `ChannelF` | ChannelF | `.rom`, `.bin` |
| `ColecoVision` | Coleco | `.col`, `.bin`, `.rom` |
| `CreatiVision` | CreatiVision | `.rom`, `.bin`, `.bas` |
| `FDS` | NES, FDS | `.fds` |
| `Gamate` | Gamate | `.bin` |
| `Gameboy` | GAMEBOY | `.gb` |
| `GameboyColor` | GAMEBOY, GBC | `.gbc` |
| `Gameboy2P` | GAMEBOY2P | `.gb`, `.gbc` |
| `GameGear` | SMS, GameGear | `.gg` |
| `GameNWatch` | GameNWatch | `.bin` |
| `GBA` | GBA | `.gba` |
| `GBA2P` | GBA2P | `.gba` |
| `Genesis` | MegaDrive, Genesis | `.gen`, `.bin`, `.md` |
| `Intellivision` | Intellivision | `.int`, `.bin` |
| `Jaguar` | Jaguar | `.jag`, `.j64`, `.rom`, `.bin` |
| `JaguarCD` | Jaguar | `.cdi` |
| `MasterSystem` | SMS | `.sms` |
| `MegaCD` | MegaCD | `.cue`, `.chd` |
| `MegaDuck` | GAMEBOY, MegaDuck | `.bin` |
| `NeoGeo` | NEOGEO | `.neo`, `.zip` (folders) |
| `NeoGeoCD` | NeoGeo-CD, NEOGEO | `.cue`, `.chd` |
| `NeoGeoPocket` | NGP | `.ngp` |
| `NeoGeoPocketColor` | NGPC | `.ngc` |
| `NES` | NES | `.nes` |
| `NESMusic` | NES | `.nsf` |
| `Nintendo64` | N64 | `.n64`, `.z64` |
| `Odyssey2` | ODYSSEY2 | `.bin` |
| `PocketChallengeV2` | WonderSwan, PocketChallengeV2 | `.pc2` |
| `PokemonMini` | PokemonMini | `.min` |
| `PSX` | PSX | `.cue`, `.chd`, `.exe` |
| `Saturn` | Saturn | `.cue`, `.chd` |
| `Sega32X` | S32X | `.32x` |
| `SG1000` | SG1000, Coleco, SMS | `.sg` |
| `SNES` | SNES | `.sfc`, `.smc`, `.bin`, `.bs` |
| `SNESMusic` | SNES | `.spc` |
| `SuperGameboy` | SGB | `.sgb`, `.gb`, `.gbc` |
| `SuperGrafx` | TGFX16 | `.sgx` |
| `SuperVision` | SuperVision | `.bin`, `.sv` |
| `TurboGrafx16` | TGFX16 | `.pce`, `.bin` |
| `TurboGrafx16CD` | TGFX16-CD | `.cue`, `.chd` |
| `VC4000` | VC4000 | `.bin` |
| `Vectrex` | VECTREX | `.vec`, `.bin`, `.rom` |
| `WonderSwan` | WonderSwan | `.ws` |
| `WonderSwanColor` | WonderSwan, WonderSwanColor | `.wsc` |

### Computer Systems

| System ID | Folders | Extensions |
|-----------|---------|------------|
| `AcornAtom` | AcornAtom | `.vhd` |
| `AcornElectron` | AcornElectron | `.vhd` |
| `AliceMC10` | AliceMC10 | `.c10` |
| `Amiga` | Amiga | `.adf` |
| `Amstrad` | Amstrad | `.dsk`, `.cdt` |
| `AmstradPCW` | Amstrad PCW | `.dsk` |
| `Apogee` | APOGEE | `.rka`, `.rkr`, `.gam` |
| `AppleI` | Apple-I | `.txt` |
| `AppleII` | Apple-II | `.dsk`, `.do`, `.po`, `.nib`, `.hdv` |
| `Aquarius` | AQUARIUS | `.bin`, `.caq` |
| `Atari800` | ATARI800 | `.atr`, `.xex`, `.xfd`, `.atx`, `.car`, `.rom`, `.bin` |
| `BBCMicro` | BBCMicro | `.ssd`, `.dsd`, `.vhd` |
| `BK0011M` | BK0011M | `.bin`, `.dsk`, `.vhd` |
| `C16` | C16 | `.d64`, `.g64`, `.prg`, `.tap`, `.bin` |
| `C64` | C64 | `.d64`, `.g64`, `.t64`, `.d81`, `.prg`, `.crt`, `.reu`, `.tap` |
| `CasioPV2000` | Casio_PV-2000 | `.bin` |
| `CoCo2` | CoCo2 | `.dsk`, `.cas`, `.ccc`, `.rom` |
| `DOS` | AO486, /media/fat/_DOS Games | `.mgl`, `.vhd`, `.img`, `.ima`, `.vfd`, `.iso`, `.cue`, `.chd` |
| `EDSAC` | EDSAC | `.tap` |
| `Galaksija` | Galaksija | `.tap` |
| `Interact` | Interact | `.cin`, `.k7` |
| `Jupiter` | Jupiter | `.ace` |
| `Laser` | Laser | `.vz` |
| `Lynx48` | Lynx48 | `.tap` |
| `MacPlus` | MACPLUS | `.dsk`, `.img`, `.vhd` |
| `MSX` | MSX | `.vhd` |
| `MSX1` | MSX1 | `.dsk`, `.rom` |
| `MultiComp` | MultiComp | `.img` |
| `Orao` | ORAO | `.tap` |
| `Oric` | Oric | `.dsk` |
| `PCXT` | PCXT | `.img`, `.vhd`, `.ima`, `.vfd` |
| `PDP1` | PDP1 | `.bin`, `.rim`, `.pdp` |
| `PET2001` | PET2001 | `.prg`, `.tap` |
| `PMD85` | PMD85 | `.rmm` |
| `QL` | QL | `.mdv`, `.win` |
| `RX78` | RX78 | `.bin` |
| `SAMCoupe` | SAMCOUPE | `.dsk`, `.mgt`, `.img` |
| `SordM5` | Sord M5 | `.bin`, `.rom`, `.cas` |
| `Specialist` | SPMX | `.rks`, `.odi` |
| `SVI328` | SVI328 | `.cas`, `.bin`, `.rom` |
| `TatungEinstein` | TatungEinstein | `.dsk` |
| `TI994A` | TI-99_4A | `.bin`, `.m99` |
| `TomyTutor` | TomyTutor | `.bin`, `.cas` |
| `TRS80` | TRS-80 | `.dsk`, `.jvi`, `.cmd`, `.cas` |
| `TSConf` | TSConf | `.vhd` |
| `UK101` | UK101 | `.txt`, `.bas`, `.lod` |
| `Vector06C` | VECTOR06 | `.rom`, `.com`, `.c00`, `.edd`, `.fdd` |
| `VIC20` | VIC20 | `.d64`, `.g64`, `.prg`, `.tap`, `.crt` |
| `X68000` | X68000 | `.d88`, `.hdf`, `.mgl` |
| `ZX81` | ZX81 | `.p`, `.0` |
| `ZXSpectrum` | Spectrum | `.tap`, `.csw`, `.tzx`, `.sna`, `.z80`, `.trd`, `.img`, `.dsk`, `.mgt`, `.vhd` |
| `ZXNext` | ZXNext | `.vhd`, `.tzx`, `.csw` |

### Other Systems

| System ID | Folders | Extensions |
|-----------|---------|------------|
| `Arcade` | _Arcade | `.mra` |
| `Arduboy` | Arduboy | `.hex`, `.bin` |
| `Chip8` | Chip8 | `.ch8` |
| `Groovy` | Groovy | `.gmc` |
| `ScummVM` | ScummVM | (special) |
| `Video` | Video, Movies, TV | `.mp4`, `.mkv`, `.avi`, `.mov`, `.webm` |

## Special Features

### ao486

If a `.vhd` file is launched via Zaparoo and is in its own folder with an `.iso` or `.chd` file, that disc image will be automatically mounted alongside the hard drive.

### AmigaVision (Amiga)

Launching games in the [AmigaVision](https://amiga.vision/) image on the Amiga core is supported via the `games.txt` and `demos.txt` files located in the `Amiga/listings` folder on your SD card.

For example, to launch Beneath a Steel Sky in AmigaVision:

```
Amiga/listings/games.txt/Beneath a Steel Sky (OCS)[en]
```

The `games.txt` and `demos.txt` files contain a listing of all supported games and demos, generated by AmigaVision, and can be treated as a virtual folder for launching via Zaparoo.

### Game & Watch

Two cores are supported:

| Folder | Extensions | Core |
|--------|------------|------|
| GameNWatch | `.bin` | GnW |
| Game and Watch | `.gnw` | GameAndWatch |

### NeoGeo

NeoGeo supports launching `.zip` files and folders directly with Zaparoo, as supported by the MiSTer core itself.

For example, a `.zip` file:

```
NeoGeo/mslug.zip
```

Or a folder:

```
NeoGeo/mslug2
```

### ScummVM

ScummVM support uses the [bbond007 script](https://github.com/bbond007/MiSTer_ScummVM). Install the script, add your games to the ScummVM folder, and update the media database. Games are automatically detected from the ScummVM configuration file.

### Video Playback

Video playback uses [nextfvp](https://github.com/kyx0r/nextfvp), a framebuffer video player. To set up video playback:

1. Download [fvp-mister_arm-15ea265.zip](https://zaparoo.org/files/fvp-mister_arm-15ea265.zip)
2. Extract the `fvp` binary to `/media/fat/linux/`
3. Create a `Video` folder in your games directory (e.g., `/media/fat/games/Video/`)
4. Add your video files to the Video folder
5. Update the media database

Supported formats: MP4, MKV, AVI, MOV, WEBM

## Alternate Launchers

Some alternate or unofficial versions of cores are supported and can be used by explicitly setting a launcher in the ZapScript on a token. Zaparoo assumes they're installed in either the default location from Update All or in the appropriate menu folder.

To use them, add the following to the end of the file path or launch command: `?launcher=<launcher ID>`. For example: `N64/some/game.n64?launcher=80MHzNintendo64`

To set an alternate core as the default for all tokens of a launcher (instead of per-token), use the [`load_path`](../../core/config.md#launchersdefault) field in `config.toml`:

```toml
[[launchers.default]]
launcher = "Nintendo64"
load_path = "_LLAPI/N64_LLAPI"
```

`load_path` is an MGL-form RBF path relative to `/media/fat`, without extension. A config reload is sufficient after changing this — no service restart required.

### LLAPI

Bliss-Box LLAPI cores. Alternate Arcade cores can be referenced directly with their `.mra` files.

| Launcher ID | System |
|-------------|--------|
| `LLAPIAtari2600` | Atari 2600 |
| `LLAPIAtari7800` | Atari 7800 |
| `LLAPIGameboy` | Game Boy |
| `LLAPIGBA` | Game Boy Advance |
| `LLAPIMegaDrive` | Genesis/Mega Drive |
| `LLAPISMS` | Master System |
| `LLAPIMegaCD` | Mega CD |
| `LLAPINeoGeo` | Neo Geo |
| `LLAPINES` | NES |
| `LLAPINintendo64` | Nintendo 64 |
| `LLAPI80MHzNintendo64` | Nintendo 64 (80MHz) |
| `LLAPIPSX` | PlayStation |
| `LLAPIS32X` | Sega 32X |
| `LLAPISuperGameboy` | Super Game Boy |
| `LLAPISaturn` | Saturn |
| `LLAPISNES` | SNES |
| `LLAPITurboGrafx16` | TurboGrafx-16 |
| `LLAPISuperGrafx` | SuperGrafx |

### PWM

24-bit video PWM cores.

| Launcher ID | System |
|-------------|--------|
| `PWMNintendo64` | Nintendo 64 |
| `PWM80MHzNintendo64` | Nintendo 64 (80MHz) |
| `PWMPSX` | PlayStation |
| `PWM2XPSX` | PlayStation (2X CPU) |
| `PWMSaturn` | Saturn |

### Overclock

Robert Piep's experimental overclock cores.

| Launcher ID | System |
|-------------|--------|
| `80MHzNintendo64` | Nintendo 64 |
| `2XPSX` | PlayStation |

### DualRAM

Dual-SDRAM cores from [TheJesusFish/Dual-Ram-Console-Cores](https://github.com/TheJesusFish/Dual-Ram-Console-Cores).

| Launcher ID | System |
|-------------|--------|
| `DualRAM3DO` | 3DO |
| `DualRAMJaguar` | Jaguar |
| `DualRAMPSX` | PlayStation |
| `DualRAMSaturn` | Saturn |

### Sinden Lightgun

Sinden Lightgun cores.

:::info
The Sinden cores must be installed in a custom `_Sinden` folder at the top of the SD card, or in the `Light Gun` folder if using newer core versions. Otherwise Zaparoo won't see them and they will conflict with official cores.
:::

| Launcher ID | System |
|-------------|--------|
| `SindenGenesis` | Genesis |
| `SindenMegaDrive` | Mega Drive |
| `SindenSMS` | Master System |
| `SindenMegaCD` | Mega CD |
| `SindenNES` | NES |
| `SindenPSX` | PlayStation |
| `SindenSNES` | SNES |
